--- a/Bio.html
+++ b/Bio.html
@@ -25,8 +25,8 @@
 <ul>
 	<li>Drawing & Painting</li>
 	<li>Running (poorly)</li>
-	<li>Reading</li>
 	<li>Making movies</li>
+	<li>Reading</li>
 	<li>Android and Web Development</li>
 	<li>Reading about Android and Web Development</li>
 	<li>Clever contrasting of list items</li>
@@ -43,6 +43,6 @@
 
 <img src="Images/creep.png" style="position:absolute; bottom:0; left:80%; margin-left:-100px">
 
-<div class="return"> <a href="Index.html">Return Home </a>  </div>
+<div class="return"> <a href="index.html">Return Home </a>  </div>
 <div class="footer"> rssteffey42@students.tntech.edu  &nbsp &nbsp &nbsp &nbsp   (865) 719-2881  </div>
 </body>
