--- a/Bio.html
+++ b/Bio.html
@@ -2,16 +2,16 @@
 
 <head>
 <link href='http://fonts.googleapis.com/css?family=Boogaloo|Fjalla+One|Jura|Chelsea+Market' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" type="text/css" href="shawn.css">
+<link rel="stylesheet" type="text/css" href="art.css">
 
 <title>About Shawn</title>
 </head>
 
-<body style="background-image:url('Images/notebook.png')">
+<body style="background-image:url('Images/doodleBackground.png')">
 
-<h1> About Shawn </h1>
+<h1 class="pageTitle"> About Shawn </h1>
 
-<div class="mainBox">
+<div class="bioBox">
 
 <p>
 	Shawn is currently a senior in Computer Science at Tennessee Tech University, with only 9 hours of mandatory classes left! But he unfortunately cannot graduate until Spring 2015.
@@ -19,7 +19,7 @@
 </p>
 
 <p>
-	Aside from his job animating videos at the campus STEM Center, Shawn maintains a variety of hobbies, including:
+	Aside from his job creating videos at the campus STEM Center, Shawn maintains a variety of hobbies, including:
 </p>
 
 <ul>
@@ -40,9 +40,9 @@
 	If Shawn could be any household appliance, he would be a toaster oven.  Only Shawn knows his reasoning behind this choice.
 </p>
 </div>
-
-<img src="Images/creep.png" style="position:absolute; bottom:0; left:80%; margin-left:-100px">
-
-<div class="return"> <a href="index.html">Return Home </a>  </div>
-<div class="footer"> rssteffey42@students.tntech.edu  &nbsp &nbsp &nbsp &nbsp   (865) 719-2881  </div>
+<!--
+<img src="Images/creep.png" style="position:fixed; bottom:0; padding:0; margin-left:80%; z-index:0">
+-->
+<div class="centerBox"><div class="return"> <a href="index.html">Return Home </a>  </div></div>
+<div class="centerBox"><div class="footer"> rssteffey42@students.tntech.edu  &nbsp &nbsp &nbsp &nbsp   (865) 719-2881  </div></div>
 </body>
