--- a/Bio.html
+++ b/Bio.html
@@ -15,7 +15,7 @@
 
 <p>
 	Shawn is currently a senior in Computer Science at Tennessee Tech University, with only 9 hours of mandatory classes left! But he unfortunately cannot graduate until Spring 2015.
-	This leaves him with plenty of time to pursue other programming projects rather than those for academics! 
+	This leaves him with plenty of time to pursue other programming projects rather than just academics! 
 </p>
 
 <p>
