EPCOT and Google post
The obsession becomes public...

--- a/Bio.html
+++ b/Bio.html
@@ -24,16 +24,17 @@
 <div class="bioBox">
 
 <p>
-	Shawn is currently a senior in Computer Science at Tennessee Tech University, with only 9 hours of mandatory classes left! But he unfortunately cannot graduate until Spring 2015.
+	Shawn is currently a senior in Computer Science at Tennessee Tech University, with only 2 hours of mandatory classes left! But he unfortunately cannot graduate until Spring 2015.
 	This leaves him with plenty of time to pursue other programming projects rather than just academics! 
 </p>
 
 <p>
-	Aside from his job creating videos at the campus STEM Center, Shawn maintains a variety of hobbies, including:
+	Aside from creating videos at the campus STEM Center, Shawn maintains a variety of hobbies, including:
 </p>
 
 <ul>
 	<li>Drawing & Painting</li>
+	<li>Game Design</li>
 	<li>Running (poorly)</li>
 	<li>Making movies</li>
 	<li>Reading</li>
@@ -48,7 +49,7 @@
 </p>
 -->
 <p>
-	If Shawn could be any household appliance, he would be a toaster oven.  Only Shawn knows his reasoning behind this choice.
+	Shawn is currently looking for a web or mobile development opportunity somewhere in Tennessee.
 </p>
 </div>
 <!--
