--- a/Bio.html
+++ b/Bio.html
@@ -15,6 +15,9 @@
   ga('send', 'pageview');
 
 </script>
+
+<script src="https://use.fontawesome.com/be14366987.js"></script>
+
 </head>
 
 <body style="background-image:url('Images/doodleBackground.png')">
@@ -56,5 +59,5 @@
 <img src="Images/creep.png" style="position:fixed; bottom:0; padding:0; margin-left:80%; z-index:0">
 -->
 <div class="centerBox"><div class="return"> <a href="index.html">Return Home </a>  </div></div>
-<div class="centerBox"><div class="footer"> rssteffey42@students.tntech.edu  &nbsp &nbsp &nbsp &nbsp   (865) 719-2881  </div></div>
+<div class="centerBox"><div class="footer"> <i class="fa fa-envelope" aria-hidden="true"></i> &nbsp rssteffey@gmail.com &nbsp &nbsp &nbsp  <i class="fa fa-twitter" aria-hidden="true"></i> &nbsp @SteffeyStudios  </div></div>
 </body>
