Add minor bio tweaks - Add small footnote style - Add two draft posts

--- a/Bio.html
+++ b/Bio.html
@@ -27,7 +27,7 @@
 <div class="bioBox">
 
 <p>
-	Shawn currently has a job in Franklin, TN, maintaining an abhorrent legacy system of PHP, PostgreSQL, and Front-end HTML/CSS/JS - all of which are frequently found mashed into one file.  Shawn likes to pretend this experience is a bit like exploring an alien planet, attempting to make sense of the truly bizarre and nonsensical geography, ocassionally discovering relics from past explorers, but mostly stumbling around with only a general sense of direction and minimal tools to progress.
+	Shawn currently has a job in Nashville, TN, maintaining a legacy jumble of often poorly-coded JS, Node, and React. Shawn likes to pretend this experience is a bit like exploring an alien planet, attempting to make sense of the truly bizarre and nonsensical geography, ocassionally discovering relics from past explorers, but mostly stumbling around with only a general sense of direction and minimal tools to progress.
 </p>
 <p>
 	This is not at all accurate.  But Shawn likes to pretend it all the same.
